<resources>
    <string name="app_name">Blaze</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="text_forgot_password">Forgot Password? Click here.</string>
    <string name="text_signin_message">Sign In</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="text_signin_social_media">Sign in with Google</string>
    <string name="button_sign_in">Sign In</string>
    <string name="text_signin_signup">Sign Up</string>
    <string name="text_signup_message">Sign Up</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="text_signup_terms">Sign Up Terms</string>
    <string name="hint_name">Name</string>
</resources>